ADD: stars and oval

--- a/Examples.html
+++ b/Examples.html
@@ -8,6 +8,18 @@
   <body>
     <header>   <p class="header">Examples</p>  </header>
     <a class="main" href="./Main.html"> <img title="Main" src="./11561_Sun.png" width="100" height="100"> </a>
+    <img title="star1" class="star star1" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star2" class="star star2" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star3" class="star star3" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star4" class="star star4" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star5" class="star star5" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star6" class="star star6" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star7" class="star star7" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    <img title="star8" class="star star8" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    <img title="star9" class="star star9" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star10" class="star star10" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star11" class="star star11" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    
     <footer class="footer">
       @copyright
     </footer>
