--- a/Main.html
+++ b/Main.html
@@ -7,10 +7,28 @@
   </head>
   <body>
     <header>   <p class="header">My First Portfolio</p>  </header>
-    <a href="./Main.html"> <img title="Main" id="sun" src="./11561_Sun.png" width="100" height="100"> </a>
-    <a href="./Examples.html"> <img title="Examples" id="earth" src="./1200px-Kawaii_earth_clipart.svg.png" idth="100" height="100"> </a>
-    <a href="./About Me.html"> <img title="About Me" id="venus" src="./planets-13.png" idth="100" height="100"> </a>
-    <a href="./Portfolio.html"> <img title="Portfolio" id="jupiter" src="./Titani.webp" idth="100" height="100"> </a>
+    <a href="./Main.html"> <img title="Main" id="sun" src="./11561_Sun.png" width="200" height="200"> </a>
+    <a href="./Examples.html"> <img title="Examples" id="earth" src="./1200px-Kawaii_earth_clipart.svg.png" width="125" height="125"> </a>
+    <a href="./About Me.html"> <img title="About Me" id="venus" src="./planets-13.png" width="125" height="125"> </a>
+    <a href="./Portfolio.html"> <img title="Portfolio" id="jupiter" src="./Titani.webp" width="125" height="125"> </a>
+    <img title="star1" class="star star1" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star2" class="star star2" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star3" class="star star3" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star4" class="star star4" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star5" class="star star5" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star6" class="star star6" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star7" class="star star7" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    <img title="star8" class="star star8" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    <img title="star9" class="star star9" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
+    <img title="star10" class="star star10" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
+    <img title="star11" class="star star11" src="./6-61721_shining-star-png-circle.png" width="75" height="75">
+    <!-- <img title="star1" id="star" src="./6-6121_s721_shining-star-png-circle.png" width="100" height="100">
+    <img title="star1" id="star" src="./6-617hining-star-png-circle.png" width="100" height="100"> -->
+    
+    <div class="oval1"></div>
+    <div class="oval2"></div>
+    <div class="oval3"></div>
+
     <footer class="footer">
       @copyright
     </footer>
