--- a/Login Form.html
+++ b/Login Form.html
@@ -52,7 +52,7 @@
 
     <section class="h-screen">
       <div class="h-full">
-        <div class="bg-black w-full sm:max-w-md flex flex-col justify-left items-left h-full g-10 text-white text-lg pt-10">
+        <div class="bg-black w-full sm:max-w-md flex flex-col items-center justify-center h-full g-10 text-white text-lg pt-10">
           <p class="text-center g-10 text-white text-4xl font-bold"> Login </p>
           <div class="p-10">
               <form>
@@ -193,8 +193,9 @@
       </div>
     </section>
 
-    <section class="h-screen md:w-5/5">
-      <div class="h-full w-full place-content-center grid">
+    <section class="h-screen">
+      <iframe src="./Main.html" width="650px" height="650px" class="justify-center"></iframe>
+      <!--<div class="h-full w-full place-content-center grid">
         <div class="">
           <a href="./Main.html"> <img title="Main" id="sun" src="./11561_Sun.png" width="150" height="150"> </a>
           <div class="inline-grid">
@@ -209,8 +210,8 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div>-->
+    </section> 
     
 
     <!-- <section class="block md:hidden h-screen">
