--- a/Main.html
+++ b/Main.html
@@ -35,26 +35,26 @@
     <div class="galaxy">
       
       <div class="orbit" style="--d:500px; --r: -50deg;">
-        <a href="./Portfolio.html" class="planet" style="--d: 257px;"> 
+        <a href="./Portfolio.html" target="_blank" class="planet" style="--d: 257px;"> 
           <img title="Portfolio" class="planet-img" style="--wh: 100px; --r: 50deg;" src="./Titani.webp"> 
         </a>
       </div>
 
       <div class="orbit" style="--d:350px; --r:-130deg;">
-        <a href="./About Me.html" class="planet" style="--d: 177px"> 
+        <a href="./About Me.html" target="_blank" class="planet" style="--d: 177px"> 
           <img title="About Me" class="planet-img" style="--wh: 80px; --r: 130deg;" src="./planets-13.png"> 
         </a>
       </div>
       
       <div class="orbit" style="--d:230px; --r:80deg;">
-        <a href="./Login Form.html" class="planet" style="--d: 117px"> <!--1/2+2 2: border-->
+        <a href="./Login Form.html" target="_blank" class="planet" style="--d: 117px"> <!--1/2+2 2: border-->
           <img title="Login Form" class="planet-img" style="--wh: 95px; --r: -80deg;" src="./1200px-Kawaii_earth_clipart.svg.png"> 
         </a>
       </div>
 
       <div class="orbit" style="--d:0px;">
         <a href="./Main.html"> 
-          <img title="Main" class="planet-img" style="--wh: 150px;" src="./11561_Sun.png" > </a>
+          <img title="Main" target="_blank" class="planet-img" style="--wh: 150px;" src="./11561_Sun.png" > </a>
       </div>
     </div>
 
