--- a/Main.html
+++ b/Main.html
@@ -41,8 +41,8 @@
       </div>
 
       <div class="orbit" style="--d:350px; --r:-130deg;">
-        <a href="./About Me.html" target="_blank" class="planet" style="--d: 177px"> 
-          <img title="About Me" class="planet-img" style="--wh: 80px; --r: 130deg;" src="./planets-13.png"> 
+        <a href="./mainpage.html" target="_blank" class="planet" style="--d: 177px"> 
+          <img title="News" class="planet-img" style="--wh: 80px; --r: 130deg;" src="./planets-13.png"> 
         </a>
       </div>
       
