--- a/Login Form.html
+++ b/Login Form.html
@@ -6,7 +6,7 @@
     <link href="stylesLog.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="grid grid-cols-1 md:grid-cols-2">
+  <body >
 
     <img title="star1" class="star star1" src="./6-61721_shining-star-png-circle.png" width="50" height="50">
     <img title="star2" class="star star2" src="./6-61721_shining-star-png-circle.png" width="25" height="25">
@@ -52,7 +52,7 @@
 
     <section class="h-screen">
       <div class="h-full">
-        <div class="bg-black w-full sm:max-w-md flex flex-col items-center justify-center h-full g-10 text-white text-lg pt-10">
+        <div class="bg-black w-full mx-auto sm:max-w-md flex flex-col items-center justify-center h-full g-10 text-white text-lg pt-10">
           <p class="text-center g-10 text-white text-4xl font-bold"> Login </p>
           <div class="p-10">
               <form>
@@ -193,8 +193,8 @@
       </div>
     </section>
 
-    <section class="h-screen">
-      <iframe src="./Main.html" width="650px" height="650px" class="justify-center"></iframe>
+    <!-- <section class="h-screen">
+      <iframe src="./Main.html" width="100%" height="100%" class="justify-center"></iframe> -->
       <!--<div class="h-full w-full place-content-center grid">
         <div class="">
           <a href="./Main.html"> <img title="Main" id="sun" src="./11561_Sun.png" width="150" height="150"> </a>
@@ -211,7 +211,7 @@
           </div>
         </div>
       </div>-->
-    </section> 
+    <!-- </section>  -->
     
 
     <!-- <section class="block md:hidden h-screen">
